<resources>
    <string name="app_name">Fish Encyclopedia</string>
    <string name="fish_name">Fish Name</string>
    <string name="fish_title_description">Description</string>
    <string name="fish_description">Description of the fish is being displayed here.</string>
    <string name="fish_title_location">Location</string>
    <string name="fish_location">Fish Location</string>
    <string name="fish_title_size">Size</string>
    <string name="fish_size">Fish Size</string>
    <string name="fish_title_price">Price</string>
    <string name="fish_price">Fish Price</string>
    <string name="profile_name">Ardana Rahadiyan Darojat</string>
    <string name="profile_email">ardana.rahadiyan01@ui.ac.id</string>
    <string name="share_description">Share this animal crossing fish information to others</string>
    <string name="about">About</string>
    <string-array name="data_name">
        <item>Betta</item>
        <item>Guppy</item>
        <item>Pop-eyed Goldfish</item>
        <item>Neon Tetra</item>
        <item>Arapaima</item>
        <item>Napoleonfish</item>
        <item>Ocean Sunfish</item>
        <item>Suckerfish</item>
        <item>Barreleye</item>
        <item>Coelacanth</item>
        <item>Tuna</item>
        <item>Ribbon Eel</item>
        <item>Giant Trevally</item>
        <item>Mahi-mahi</item>
        <item>Catfish</item>
        <item>Snapping Turtle</item>
        <item>Giant Snakehead</item>
        <item>Football Fish</item>
        <item>Surgeonfish</item>
        <item>Hammerhead Shark</item>
        <item>Koi</item>
        <item>Whale Shark</item>
        <item>Zebra Turkeyfish</item>
        <item>Butterfly Fish</item>
        <item>Olive Flounder</item>
    </string-array>
</resources>